--- a/templates/my_posts.html
+++ b/templates/my_posts.html
@@ -8,23 +8,29 @@
 <h2>My Posted Listings</h2>
 
 {% if listings %}
-   {% for item in listings %}
-    <hr>
-    <p><strong>Title:</strong> {{ item[1] }}</p>
-    <p><strong>Description:</strong> {{ item[2] }}</p>
-    <p><strong>Type:</strong> {{ item[3] }}</p>
-    <p><strong>Price:</strong> {{ item[4] }}</p>
-    <p><strong>Status:</strong>
-        {% if item[5] == 1 %}
-            Available
-        {% else %}
-            Not Available
-        {% endif %}
-    </p>
 
-    <a href="/delete/{{ item[0] }}">Delete</a>
+    {% for item in listings %}
+        <hr>
 
-{% endfor %}
+        <p><strong>Title:</strong> {{ item[1] }}</p>
+        <p><strong>Description:</strong> {{ item[2] }}</p>
+        <p><strong>Type:</strong> {{ item[3] }}</p>
+        <p><strong>Price:</strong> {{ item[4] }}</p>
+
+        <p><strong>Status:</strong>
+            {% if item[5] %}
+                Available
+            {% else %}
+                Not Available
+            {% endif %}
+        </p>
+
+        <form action="/delete/{{ item[0] }}" method="POST" style="display:inline;">
+            <button type="submit">Delete</button>
+        </form>
+
+    {% endfor %}
+
 {% else %}
     <p>You have not posted anything yet.</p>
 {% endif %}
