styled all pages

--- a/templates/post.html
+++ b/templates/post.html
@@ -12,7 +12,7 @@
     <h2 style="text-align:center;color:aliceblue;font-size: 35px;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">CREATE LISTING</h2>
 
     <form method="POST" action="/post">
-        <div style="text-align: center; color: white;">
+        <div style="text-align: center; color: white; font-size: 20px;">
 
         <input type="text" name="title" placeholder="Title" required>
         <br><br>
