--- a/templates/browse.html
+++ b/templates/browse.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Browse Listings</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
