--- a/templates/my_requests.html
+++ b/templates/my_requests.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>My Requests</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
 
