--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="/static/style2.css">
 </head>
 <body>
-    
+
+    <h1 style="font-size: 145px; color: blanchedalmond;font-family:'Times New Roman', Times, serif">lendR</h1>
+    <img src="/static/lendr.jpeg" alt="">
+
+    <div class="home-box">
+        <a href="/login">Login</a>
+        <br><br>
+        <a href="/signup">Register</a>
+        <br><br>
+        
+    </div>
+
 </body>
 </html>
